Fixed login and register page design on mobile devices

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,6 +1,6 @@
 body{
-	min-width: 500px;
-	min-height: 500px;
+	min-width: 350px;
+	min-height: 350px;
 	overflow-x: hidden;
 }
 
